apps/subsystems/downloaders/lidarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: lidarr
  annotations:
    secret.reloader.stakater.com/reload: ${db_name:=downloaders-db}-${db_suffix_current:=default}-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: lidarr
        image: ghcr.io/linuxserver/lidarr:3.1.0@sha256:67887807b13ae025c0fe979da298347c8609969087ab064c81d8e9acc1e06bbf
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /ping
            port: 8686
        ports:
        - name: lidarr
          containerPort: 8686
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ping
            port: 8686
        resources:
          requests:
            cpu: 15m
            memory: 145Mi
        securityContext:
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            drop:
            - ALL
        volumeMounts:
        - mountPath: /config
          name: lidarr-data
        - mountPath: /data
          name: lidarr-media
        - mountPath: /config/logs
          name: lidarr-logs
        - mountPath: /tmp
          name: lidarr-temp
      volumes:
      - name: lidarr-data
        persistentVolumeClaim:
          claimName: lidarr-data
      - name: lidarr-media
        persistentVolumeClaim:
          claimName: media
      - name: lidarr-logs
        emptyDir: {}
      - name: lidarr-temp
        emptyDir: {}
