apps/subsystems/downloaders/lidarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: lidarr
spec:
  selector:
    app.kubernetes.io/name: lidarr
  ports:
  - name: lidarr
    port: 8686
    targetPort: lidarr
    protocol: TCP
  type: ClusterIP
